--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
 <html>
-  <script>
-    alert("a")
-  </script>
-</html> 
+	<head>
+		<meta charset="UTF-8">
+		<title></title>
+	</head>
+	<style type="text/css">
+	.wrapper {
+      position: relative;
+      width: 500px;
+      height: 500px;
+      background-color: #ddd;
+     }
+    .content{
+        background-color:#6699FF;
+        width:200px;
+        height:200px;
+        position: absolute;        
+        top: 50%;
+        left: 50%;
+        margin-top: -100px;
+        margin-left: -100px;
+    } 
+	</style>
+	<body>
+	  <div class="wrapper">
+	  	<div class="content"></div>
+	  </div>
+	</body>
+</html>
