--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</style>
 	<body>
 	  <div class="wrapper">
-	  	<div class="content"></div>
+	  	<div class="content">您好，欢迎光临！！</div>
 	  </div>
 	</body>
 </html>
